Primeira configurações de estilização e definições para qual caminho desejo ir com esse projeto. Implementação do site em ingles / Portugues

--- a/sobremim.html
+++ b/sobremim.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Declaração do tipo de documento HTML -->
+<html lang="pt-br">
+<!-- Início do documento HTML com a linguagem definida como português do Brasil -->
 <head>
+    <!-- Cabeçalho do documento HTML -->
     <meta charset="UTF-8">
+    <!-- Define a codificação de caracteres como UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Configura a viewport para garantir que o site seja responsivo em dispositivos móveis -->
+    <title>Portifolio João Gabriel</title>
+    <!-- Título da página que aparece na aba do navegador -->
+    <link rel="stylesheet" href="styles.css">
+    <!-- Vincula o arquivo CSS externo -->
 </head>
 <body>
+    <!-- Corpo do documento HTML -->
     <header>
+        <!-- Cabeçalho do site -->
         <h1 class="titulo">João Gabriel Borba do Nascimento</h1>
+        <!-- Título principal do site -->
         <div>
+            <!-- Container para o menu de navegação -->
             <nav>
+                <!-- Elemento de navegação -->
                 <ul>
-                    <li class="menu"><strong><a href="sobremim.html">Sobre mim</a></strong></li>
-                    <li class="menu"><strong><a href="projetos">Projetos</a></strong></li>
-                    <li class="menu"><strong><a href="curriculum">Curriculum</a></strong></li>
-                    <li class="menu"><strong><a href="contato">Contato</a></strong></li>
+                    <!-- Lista não ordenada para os itens do menu -->
+                    <li class="menu"><a href="sobremim.html">Sobre mim</a></li>
+                    <!-- Item do menu com link para a página "Sobre mim" -->
+                    <li class="menu"><a href="projetos.html">Projetos</a></li>
+                    <!-- Item do menu com link para a página "Projetos" -->
+                    <li class="menu"><a href="curriculum.html">Curriculum</a></li>
+                    <!-- Item do menu com link para a página "Curriculum" -->
+                    <li class="menu"><a href="contato.html">Contato</a></li>
+                    <!-- Item do menu com link para a página "Contato" -->
                 </ul>
             </nav>
         </div>
     </header>
-    <p>Sobre mim</p>
+    <main>
+        <p>Sobre mim</p>
+        <!-- Parágrafo com o texto "Sobre mim" -->
+    </main>
+    <footer>
+        <!-- Rodapé do site -->
+    </footer>
 </body>
 </html>
