--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         <section id="about">
             <h2>Sobre Mim</h2>
             <div class="about-content">
-                <p>Sou um desenvolvedor Full Stack com experiência em JavaScript, HTML, CSS, Java, C# e SQL. Atuo no desenvolvimento de aplicações web e sistemas robustos, combinando um front-end dinâmico e responsivo com um back-end eficiente e escalável.</p>
-                <ul class="personal-info">
+                <div class="description">
+                    <p>Sou um desenvolvedor Full Stack com experiência em JavaScript, HTML, CSS, Java, C# e SQL. Atuo no desenvolvimento de aplicações web e sistemas robustos, combinando um front-end dinâmico e responsivo com um back-end eficiente e escalável.</p>
+                </div>
+                    <ul class="personal-info">
                     <li>Idade: 25</li>
                     <li>Nome Completo: João Gabriel Borba do Nascimento</li>
                     <li>Projetos Concluídos: 10</li>
