--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </section>
     
         <!-- Footer -->
-        <footer class="container">
+        <footer>
             <p>© 2025 João Gabriel Borba. Todos os direitos reservados.</p>
         </footer>
     
